fixed search bar, load more button and deleted dark mode

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -55,58 +55,3 @@
   border-radius: 4px;
   cursor: pointer;
 }
-
-.darkModeButton {
-  display: block;
-  margin: 20px 0rem;
-  padding: 10px 20px;
-  font-size: 16px;
-  background-color: #404d56;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.darkMode .darkModeButton,
-.lightMode .darkModeButton {
-  background-color: #404d56;
-  color: #fff;
-}
-
-.darkMode .title {
-  color: #fff;
-}
-
-.darkMode .searchInput {
-  background-color: #404d56;
-  color: #fff;
-  border-color: #fff;
-}
-
-.darkMode .pokemonCard {
-  background-color: #404d56;
-  color: #fff;
-  border-color: #fff;
-}
-
-.lightMode .darkModeButton {
-  background-color: #fff;
-  color: #404d56;
-}
-
-.lightMode .searchInput {
-  background-color: #fff;
-  color: #404d56;
-}
-
-.lightMode .pokemonCard {
-  background-color: #fff;
-  color: #404d56;
-}
-
-.darkMode .loadMoreButton,
-.lightMode .loadMoreButton {
-  background-color: #404d56;
-  color: #fff;
-}
