--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,13 +4,3 @@ body {
   padding: 0;
   background-color: #353b40;
 }
-
-.lightMode {
-  background-color: #f4f4f4;
-  color: #333;
-}
-
-.darkMode {
-  background-color: #333;
-  color: #f4f4f4;
-}
